--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "/tests/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.5.4"
+    "polymer": "Polymer/polymer#^0.5.4",
+    "webcomponentsjs": "webcomponentsjs"
   },
   "devDependencies": {
     "web-component-tester": "*"
