Trying solve conflicts of depencies

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "/tests/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer"
+    "polymer": "Polymer/polymer#^0.5.4"
   },
   "devDependencies": {
     "web-component-tester": "*"
